src/objects/sma__MATerritoryCollectionFieldUpdate__c.object
<CustomObject>
    <fields>
        <fullName>sma__Collection__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Collection</label>
        <referenceTo>sma__MATerritoryCollection__c</referenceTo>
        <relationshipLabel>Field Updates</relationshipLabel>
        <relationshipName>FieldUpdates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sma__Field__c</fullName>
        <label>Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__Value__c</fullName>
        <label>Value</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>MapAnything Territory Field Update</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MapAnything Territory Field Updates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>